--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -2,7 +2,7 @@
 
   <ul class="horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
     <li>
-      <!-- [BACK END] once this button has been submitted append class 'is-saved' -->
+      <!-- [BACK END] once this button has been submitted append class 'is-saved' and change text to 'Saved' -->
       <button type="submit" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Save</button></li><!--
     --><li class="drop-down-container">
       <button type="button" class="detail-view__controls__btn btn js-drop-down-trigger" aria-haspopup="true" aria-owns="share-options"><span class="icon icon--share icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Share</button>
