Updated style sheets to use asset pipeline

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -109,13 +109,13 @@ $hero-banner-height-lrg: 380 !default;
 			/* Increase logo size and swap out for white version for 'Centre home page hero banner' at this breakpoint */
 			@include respond-min($non-palm) {
 				.is-header-hero & {
-					background: url(/assets/logo-white.svg) no-repeat 0 0;
+					background: image-url("logo-white.svg") no-repeat 0 0;
 					display: inline-block;
 					width: 126px;
 					height: 41px;
 
 					/* No SVG fallback */
-					.no-svg & {background-image: url(/assets/logo-white.png);}
+					.no-svg & {background-image: image-url("logo-white.png");}
 				}
 			}
 
