--- a/app/assets/stylesheets/partials/modules/_preloader.scss
+++ b/app/assets/stylesheets/partials/modules/_preloader.scss
@@ -26,7 +26,7 @@
 		width: 16px;
 		height: 16px;
 		overflow: hidden;
-		background: url("img/preloader.gif") no-repeat 0 0;
+		background: image-url("preloader.gif") no-repeat 0 0;
 	}
 
 	/* Create some space between the spinner and the message */
