--- a/app/assets/stylesheets/partials/utils/_mixins.scss
+++ b/app/assets/stylesheets/partials/utils/_mixins.scss
@@ -817,7 +817,7 @@
 
 	Example:
 		.logo {
-			background: url("logo.png") no-repeat;
+			background: image-url("logo.png") no-repeat;
 			@include img-2x("logo@2x.png", 100px, 25px);
 		}
 */
@@ -826,7 +826,7 @@
 	@media 	(-o-min-device-pixel-ratio: 5/4),
 					(-webkit-min-device-pixel-ratio: 1.25),
 					(min-resolution: 120dpi) {
-						background-image: url($image);
+						background-image: image-url($image);
 						background-size: $width $height;
 	}
 }
