--- a/app/assets/stylesheets/partials/utils/placeholders/_sprite-bg.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_sprite-bg.scss
@@ -11,6 +11,6 @@
 */
 
 %sprite-bg {
-	background-image: url("img/sprite.png");
+	background-image: image-url("sprite.png");
 	background-repeat: no-repeat;
 }
