--- a/app/assets/stylesheets/partials/base/_fonts.scss
+++ b/app/assets/stylesheets/partials/base/_fonts.scss
@@ -10,11 +10,11 @@
 -------------------------------------------------------*/
 @font-face {
 	font-family: "icons";
-	src: url('fonts/icons/fontello.eot?98474208');
-	src: url('fonts/icons/fontello.eot?98474208#iefix') format('embedded-opentype'),
-	   url('fonts/icons/fontello.woff?98474208') format('woff'),
-	   url('fonts/icons/fontello.ttf?98474208') format('truetype'),
-	   url('fonts/icons/fontello.svg?98474208#fontello') format('svg');
+	src: asset-url("fonts/icons/fontello.eot");
+	src: asset-url("fonts/icons/fontello.eot#iefix") format('embedded-opentype'),
+	   asset-url("fonts/icons/fontello.woff") format('woff'),
+	   asset-url("fonts/icons/fontello.ttf") format('truetype'),
+	   asset-url("fonts/icons/fontello.svg#fontello") format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
