--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -1,8 +1,23 @@
+/* ======================================================================================
+   @MODULES -> DETAIL VIEW
+   ====================================================================================== */
+
+/*
+  Usage:
+    Detail views for 'Products', 'Events' and 'Deals'.
+
+  Note:
+    At desktop size the detail views go into a dialog.
+
+  Demo:
+    Style Guide -> Modules -> Detail View
+*/
+
 .detail-view {
   @include font-size($font-size-sml);
   background-color: #fff;
 
-  /* Into lightbox at this breakpoint */
+  /* Adjustments at this breakpoint */
   @include respond-min($non-palm) {
     @include font-size($font-size);
     box-shadow: 0 1px 2px rgba(#000, 0.3);
