--- a/app/views/shared/_oldie.html.erb
+++ b/app/views/shared/_oldie.html.erb
@@ -1,3 +1,7 @@
+<!--[if lt IE 9]>
+  <%= javascript_include_tag "html5shiv/src/html5shiv-printshiv.js" %>
+<![endif]-->
+
 <!--[if (lt IE 9) & (!IEMobile)]>
   <%= javascript_include_tag "selectivizr/selectivizr" %>
 <![endif]-->
