--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,6 +123,7 @@ Global stylesheet
 @import "partials/modules/pin-board";
 @import "partials/modules/centres-list";
 @import "partials/modules/timeline";
+@import "partials/modules/deal-main";
 
 
   /* Modules -> Widgets */
