Added description and some alt text to the store show page.

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @store.name %></h1>
-<%= image_tag @store.store_front_image_url, onError: %Q(this.parentNode.removeChild(this);) %>
+<p><%= @store.description %></p>
+<%= image_tag @store.store_front_image_url, alt:@store.name, onError: %Q(this.parentNode.removeChild(this);) %>
