adding text colour to make it more legible

--- a/app/assets/stylesheets/partials/base/_text-selection.scss
+++ b/app/assets/stylesheets/partials/base/_text-selection.scss
@@ -5,11 +5,13 @@
 /* Firefox */
 ::-moz-selection {
 	background: $color-brand;
+	color: #fff;
 	text-shadow: none;
 }
 
 /* Everyone else */
 ::selection {
 	background: $color-brand;
+	color: #fff;
 	text-shadow: none;
 }
