--- a/app/assets/stylesheets/partials/modules/_deal-main.scss
+++ b/app/assets/stylesheets/partials/modules/_deal-main.scss
@@ -16,22 +16,22 @@
 .deal-main {
 	@include to-rem(min-height, 316);
 	@include to-rem(padding, 88 $spacing-base);
+}
 
-	/* Deal title */
-	.hn {
+	/* Title */
+	.deal-main__hdr {
 		font-family: $font-family-opensans;
 		@include font-size(36);
 		text-transform: uppercase;
 		@include to-rem(margin-bottom, $spacing-third);
 	}
 
-	/* Deal meta */
-	p {
+	/* Meta (deal owner and end date) */
+	.deal-main__meta {
 		margin-bottom: 0;
 		color: $color-light-txt;
 		@include font-size($font-size-lrg, 1.5);
 
-		/* Deal end date */
+		/* End date */
 		span {display: block;}
 	}
-}
