--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -4,8 +4,8 @@
   <div class="grid__item non-palm-one-half">
     <div class="island detail-view__divider--palm">
       <header class="deal-main box box--torn">
-        <h2 class="hn txt-break-word"><%= @deal.title %></h2>
-        <p>from <%= @store.name %> <span>Deal ends <time datetime="<%= DateTime.parse(@deal.available_to).strftime("%Y-%m-%d") %>"><%= DateTime.parse(@deal.available_to).strftime("%A %e %B") %></time></span></p>
+        <h2 class="deal-main__hdr txt-break-word"><%= @deal.title %></h2>
+        <p class="deal-main__meta">from <%= @store.name %> <span>Deal ends <time datetime="<%= DateTime.parse(@deal.available_to).strftime("%Y-%m-%d") %>"><%= DateTime.parse(@deal.available_to).strftime("%A %e %B") %></time></span></p>
       </header>
     </div>
   </div>
