--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -1,13 +1,12 @@
-
 /*
-▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+======================================================================================
 
 Old IE (IE < 9) stylesheet
 
 	Usage:
 		Refer to the 'Usage' section in 'main.scss'.
 
-▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+======================================================================================
 */
 
 
