adding a new abstraction - 'Toggle Content'

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,6 +108,7 @@ Global stylesheet
 @import "partials/abstractions/preserve-aspect-ratio";
 @import "partials/abstractions/dropdown";
 @import "partials/abstractions/box";
+@import "partials/abstractions/toggle-content";
 
 /* Modules */
 @import "partials/modules/feedback";
