--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
     <!-- Store location -->
     <div class="store-location detail-view__divider">
-
+      <%= render partial: 'shared/map', locals: {store_id: 490} %>
     </div>
     <!-- //Store location -->
 
