--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -58,7 +58,7 @@
         <ul class="slides">
           <!-- [BACK END] 4 images is the max, dimensions are 469px x 474px (938px x 948px for retina which we serve for all but reduce the compression) and `alt` attr's need to be dynamically populated e.g. 'Product name photo' -->
           <%- @product.images.each do |img| -%>
-            <li><%= image_tag(img) %></li>
+            <li><%= image_tag(img, alt: "Photo of #{@product.name}") %></li>
           <%- end -%>
         </ul>
       </div>
